@@ -189,6 +189,10 @@ Enable alternative spell checker command.
 Always save changed buffer without prompting.  Same as Pico's \fB-t\fP
 option.
 .TP
+.B \-u (\-\-undo)
+Enable experimental generic-purpose undo code.  By default, the undo and redo
+shortcuts are Meta-U and Meta-E, respectively.
+.TP
 .B \-v (\-\-view)
 View file (read only) mode.
 .TP
